<resources>
    <string name="app_name">CareCircleChildApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="usage">Usage</string>
    <string name="home">Home</string>
    <string name="child_avatar">Child Avatar</string>
    <string name="screen_time_remaining">Screen Time Remaining</string>
    <string name="alerts">Alerts</string>
    <string name="posture_alert">Posture Alert</string>
    <string name="reminds_to_sit_up_straight">Reminds to sit up straight</string>
    <string name="eye_icon">Eye Icon</string>
    <string name="eye_blinking_reminder">Eye Blinking Reminder</string>
    <string name="reminds_to_blink_regularly">Reminds to blink regularly</string>
    <string name="posture_icon">Posture Icon</string>
    <string name="app_usage">App Usage</string>
    <string name="daily_app_usage">Daily App Usage</string>
    <string name="app_details">App Details</string>
    <string name="fun_games">Fun Games</string>
    <string name="social_media">Social Media</string>
    <string name="learning_apps">Learning Apps</string>
    <string name="other_apps">Other Apps</string>
    <string name="break_time_illustration">Break time illustration</string>
    <string name="time_for_a_break">Time for a break!</string>
    <string name="your_device_will_unlock_in">Your device will unlock in:</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="this_device_is_managed_by_familylink">This device is managed by FamilyLink</string>
    <string name="okay">Okay</string>
    <string name="app_blocked">App Blocked</string>
    <string name="this_app_is_restricted">This app is restricted</string>
    <string name="your_parent_has_blocked_access_to_this_app">Your parent has blocked access to this app.</string>
    <string name="please_ask_them_if_you_need_to_use_it">Please ask them if you need to use it.</string>
    <string name="you_re_too_close_to_the_screen">You\'re too close to the screen</string>
    <string name="please_sit_back_to_protect_your_eyes">Please sit back to protect \n your eyes</string>
    <string name="got_it">Got it</string>
    <string name="remember_to_blink">Remember To Blink</string>
    <string name="take_a_moment_to_blink_your_eyes_it_helps_keep_them_healthy_and_refreshed">Take a moment to blink your eyes.It helps keep them healthy and refreshed</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? </string>
    <string name="login">Login</string>
    <string name="screen_locked">Screen Locked</string>
    <string name="granting_permissions_please_wait">Granting permissions, please wait...</string>
    <string name="carecircle">CareCircle</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="please_grant_required_permissions">Please grant required permissions</string>
    <string name="permissions">Permissions</string>
    <string name="usage_access">Usage Access</string>
    <string name="grant">Grant</string>
    <string name="overlay_permission">Overlay Permission</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="screen_capture_permission">Screen Capture Permission</string>
    <string name="restrictions">Restrictions</string>
    <string name="logout">Logout</string>
    <string name="link_to_parent">Link to Parent</string>
    <string name="alerts_managed_by_parent">Alerts (Managed by Parent)</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="parent">Parent</string>
    <string name="restricted_apps">Restricted Apps: --</string>
    <string name="eye_strain">Eye Strain: --</string>
    <string name="face_distance">Face Distance: --</string>
    <string name="restricted_app_alerts">Restricted App Alerts: --</string>
    <string name="copy_device_id">Copy Device ID</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="ask_parent_to_scan_qr_code">Ask parent to scan QR code</string>
    <string name="hours">Hours</string>
    <string name="_0h_00m">0h 00m</string>
    <string name="tips">Tips</string>
    <string name="remember_to_blink_often_to_protect_your_eyes">🌟 Remember to blink often to protect your eyes!</string>
    <string name="don_t_stay_too_close_to_the_screen">📱 Don\'t Stay too close to the screen</string>
    <string name="you_are_being_monitored_by_parentname">You are being monitored by </string>
    <string name="take_breaks_regularly">⏰ Take breaks regularly</string>
    <string name="dashes">---</string>
    <string name="you_can_use_between">You can use between:</string>
    <string name="today_s_usage_time">Today\'s Usage Time</string>
    <string name="_0h_0m">0h 0m</string>
    <string name="allowed_schedule">Allowed Schedule: --</string>
    <string name="dash">--</string>
    <string name="device_locked_by_parent">Device Locked by Parent</string>
</resources>