<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"

    tools:context=".Activities.LockScreenActivity">

    <!-- Top Image with elevation -->
    <androidx.cardview.widget.CardView
        android:id="@+id/imageCard"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="48dp"
        app:cardCornerRadius="16dp"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rest"
            android:contentDescription="@string/break_time_illustration"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_for_a_break"
        android:textSize="@dimen/text_title_large"
        android:fontFamily="@font/public_sans_bold"
        android:textColor="@color/textPrimary"
        app:layout_constraintTop_toBottomOf="@id/imageCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"/>

    <!-- Instruction -->
    <TextView
        android:id="@+id/instructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_device_will_unlock_in"
        android:textSize="@dimen/text_body"
        android:fontFamily="@font/public_sans_medium"
        android:textColor="@color/textSecondary"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"/>

    <!-- Timer Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/timerCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:cardElevation="8dp"
        app:contentPadding="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@id/instructionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="32dp">

                <TextView
                    android:id="@+id/hoursLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/timer_text"
                    android:textColor="@color/textPrimary"
                    android:fontFamily="@font/public_sans_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:fontFamily="@font/public_sans_bold"
                    android:textSize="@dimen/timer_label"
                    android:textColor="@color/textSecondary"/>
            </LinearLayout>

            <!-- Minutes -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginEnd="32dp">

                <TextView
                    android:id="@+id/minutesLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/timer_text"
                    android:textColor="@color/textPrimary"
                    android:fontFamily="@font/public_sans_bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:fontFamily="@font/public_sans_bold"
                    android:textSize="@dimen/timer_label"
                    android:textColor="@color/textSecondary"/>
            </LinearLayout>

            <!-- Seconds -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/secondsLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="@dimen/timer_text"
                    android:textColor="@color/textPrimary"
                    android:fontFamily="@font/public_sans_bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"
                    android:fontFamily="@font/public_sans_bold"
                    android:textSize="@dimen/timer_label"
                    android:textColor="@color/textSecondary"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
